--- a/api/package.json
+++ b/api/package.json
@@ -9,5 +9,17 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "ws": "^8.16.0"
-  }
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
+  },
+  "scripts": {
+    "start": "node index.js",     
+    "dev": "nodemon index.js"     
+  },
+  "name": "api",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT"
+
 }
